# ai-agency

./: .dockerignore  .env.aws  .env.azure  .env.example  .env.gcp  .env.test  .gitignore  .pre-commit-config.yaml  DEVOPS_FILES.txt  Dockerfile  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  alembic.ini  clouddeploy.yaml  coverage.xml  dev  docker-compose.yml  pyproject.toml
.claude/: claude.md
.claude/agents/: code-cleaner.md  code-reviewer.md  database-engineer.md  devops-engineer.md  docs-engineer.md  flows-engineer.md  llm-engineer.md  qa-engineer.md  rag-engineer.md  security-engineer.md  tech-lead.md  tools-engineer.md
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  exec_loop.py  logging.py  main.py
app/adapters/: __init__.py  langgraph_adapter.py  langgraph_tools.py  llm_factory.py  llm_mistral.py  llm_openai.py  llm_vertex.py
app/core/: __init__.py  base.py  decorators.py  exceptions.py  langgraph_checkpointer.py  rate_limiter.py  types.py
app/db/: README.md  __init__.py  base.py  models.py
app/db/migrations/: .gitkeep  env.py
app/db/migrations/versions/: 001_initial.py  003_add_langgraph_checkpoints.py  2180114a7a27_add_weather_api_calls_table_only.py  437dc3bc9d26_add_conversation_tables.py  dc838231235f_add_flow_type_to_conversations.py
app/db/repositories/: __init__.py  conversation_repository.py  weather_repository.py
app/flows/: __init__.py
app/flows/agents/: __init__.py  weather_agent.py
app/flows/invoice_manager/: __init__.py  api.py  graph.py
app/flows/maturity_assessment/: __init__.py  graph.py
app/flows/maturity_assessment/examples/: assessment.json
app/flows/maturity_assessment/schemas/: assessment.schema.json
app/flows/usecase_grooming/: __init__.py  graph.py
app/flows/usecase_grooming/schemas/: usecase.schema.json
app/rag/: __init__.py  ingestion.py  retriever.py
app/tools/: __init__.py  registry.py
app/tools/gen_recs/v1/: __init__.py
app/tools/invoice/v1/: __init__.py  detect_duplicate.py  extract_content.py  rename_invoice.py
app/tools/parse_docs/v1/: __init__.py
app/tools/rank_usecases/v1/: __init__.py
app/tools/score_rubrics/v1/: __init__.py
app/tools/sharepoint/v1/: __init__.py  scan_folders.py  search_invoices.py  upload_file.py
app/tools/weather/: __init__.py  client.py  types.py  v1.py
app/tools/write_backlog/v1/: __init__.py
docs/: AGENT_COORDINATION.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CODING_STANDARDS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PERMISSIONS.md  DEVELOPER_GUIDE.md  DEVELOPER_ONBOARDING.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  DEVOPS_QUICKSTART.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  REPO-ARCHITECTURE-LEAN-EN.md  SECURITY_AUDIT_REPORT.md  TECH_LEAD_IMPLEMENTATION_SUMMARY.md  WAVE1_DEPLOYMENT_NOTES.md  WAVE1_REVIEW.md
docs/archive/: CODE_REVIEW_CHECKLIST.md  DEVELOPER_GUIDE.md  DEVELOPER_ONBOARDING.md  QUICKSTART.md
docs/project/: ARCHITECTURE.md  CODING_STANDARDS.md
docs/wave1/: DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  PERMISSIONS_RESOLVED.md  PERMISSIONS_SUMMARY.md  WAVE1_COMPLETE.md
docs/wave1 - Foundation/: README.md
docs/wave2 - Core Services/: WAVE2_MASTER_PLAN.md  WAVE2_TEST_PRIORITIES.md
scripts/: check_conversations.py  deploy.sh  run_migrations.sh  seed.py  setup_dev.sh  setup_gcp.sh  smoke_run.py  test_db_connection.py  test_deployment_permissions.sh  validate_wave1.sh
scripts/archive/: README.md  run_migration_wrapper.sh  run_migrations.py  run_migrations.sh  setup_dev.sh  setup_gcp.sh  start_server.sh  test_weather_quick.sh  validate_setup.sh  validate_wave1.sh  verify_permissions.sh
tests/: README.md  __init__.py  test_main.py  test_tools.py
tests/integration/: test_weather_agent.py
tests/test_adapters/: test_langgraph_adapter.py  test_langgraph_tools.py  test_llm_factory.py  test_llm_mistral.py  test_llm_openai.py  test_llm_vertex.py
tests/test_db/: test_weather_repository.py
tests/test_flows/: test_invoice_manager_api.py  test_invoice_manager_flow.py
tests/test_tools/test_invoice/: __init__.py  test_tools.py
tests/test_tools/test_weather/: TEST_SUMMARY.md  __init__.py  test_client.py  test_v1.py
todo/: 1-tool-calling-abstraction.md  2-rag-implementation.md  3-langgraph-integration-code-review.md  3-langgraph-integration.md  4-invoice-manager-langgraph.md
